--- a/7110a-website/public/index.html
+++ b/7110a-website/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>7110A Site</title>
+    <script type="text/javascript" src="path-to/ghspa.js"></script>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
